--- a/php/styles.css
+++ b/php/styles.css
@@ -3,8 +3,30 @@
 
 body {
   background: #322c35;
+  color:white;
 }
 
+h2{
+  text-align:center;
+}
+
+#uploadForm{
+  color: white;
+  margin: auto;
+  position: relative;
+  text-align:center;
+}
+#fileToUpload{
+  display:inline-block;
+  margin:auto;
+}
+#generateBtn{
+  position: relative;
+  top:10px;
+}
+.progressGroup{
+  display:none;
+}
 #feedback{
   width:500px;
   display:block;
@@ -14,9 +36,6 @@ body {
 #progressReport{
   position: absolute;
   top: 10px;
-}
-#progress{
-  display:none;
 }
 #percent{
   position: absolute;
@@ -70,6 +89,9 @@ progress::-moz-progress-bar {
 }
 
 /* Button Styling */
+.genButton[disabled]{
+  opacity:0.5;
+}
 .genButton {
   width:100%;
   -moz-box-shadow:inset 0px 1px 0px 0px #f5978e;
@@ -112,9 +134,44 @@ progress::-moz-progress-bar {
   top:1px;
 }
 
-
-
-
-
-
+.downloadBtn {
+  width: 100%;
+  -moz-box-shadow:inset 0px 1px 0px 0px #54a3f7;
+  -webkit-box-shadow:inset 0px 1px 0px 0px #54a3f7;
+  box-shadow:inset 0px 1px 0px 0px #54a3f7;
+  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #007dc1), color-stop(1, #0061a7));
+  background:-moz-linear-gradient(top, #007dc1 5%, #0061a7 100%);
+  background:-webkit-linear-gradient(top, #007dc1 5%, #0061a7 100%);
+  background:-o-linear-gradient(top, #007dc1 5%, #0061a7 100%);
+  background:-ms-linear-gradient(top, #007dc1 5%, #0061a7 100%);
+  background:linear-gradient(to bottom, #007dc1 5%, #0061a7 100%);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#007dc1', endColorstr='#0061a7',GradientType=0);
+  background-color:#007dc1;
+  -moz-border-radius:3px;
+  -webkit-border-radius:3px;
+  border-radius:3px;
+  border:1px solid #124d77;
+  display:none;
+  cursor:pointer;
+  color:#ffffff;
+  font-family:arial;
+  font-size:13px;
+  padding:6px 24px;
+  text-decoration:none;
+  text-shadow:0px 1px 0px #154682;
+}
+.downloadBtn:hover {
+  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #0061a7), color-stop(1, #007dc1));
+  background:-moz-linear-gradient(top, #0061a7 5%, #007dc1 100%);
+  background:-webkit-linear-gradient(top, #0061a7 5%, #007dc1 100%);
+  background:-o-linear-gradient(top, #0061a7 5%, #007dc1 100%);
+  background:-ms-linear-gradient(top, #0061a7 5%, #007dc1 100%);
+  background:linear-gradient(to bottom, #0061a7 5%, #007dc1 100%);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#0061a7', endColorstr='#007dc1',GradientType=0);
+  background-color:#0061a7;
+}
+.downloadBtn:active {
+  position:relative;
+  top:1px;
+}
 
